--- a/static/my_blog.css
+++ b/static/my_blog.css
@@ -1,10 +1,12 @@
 h1{
   color:White;
   font-family: Verdana;
+  text-align: center;
 }
 
 body{
   background-color:pink;
+  margin-left: 20px;
 }
 
 .name{
